--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "babel-plugin-inline-react-svg": "^2.0.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "i": "^0.3.7",
     "next": "13.4.10",
+    "npm": "^9.8.0",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
