--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-inline-react-svg": "^2.0.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "firebase": "^10.0.0",
     "i": "^0.3.7",
     "next": "13.4.10",
     "npm": "^9.8.0",
