--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "10.4.14",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "firebase": "^10.0.0",
+    "firebase": "^10.1.0",
     "i": "^0.3.7",
     "next": "13.4.10",
     "npm": "^9.8.0",
